dav: Fix IPv6 address handling

It is not possible to mount WebDAV share with IPv6 address currently.
GMountSpec host contains brackets around the IPv6 address, however SoupURI
doesn't. This patch handles this when converting GMountSpec to SoupURI
and vice versa.

https://bugzilla.gnome.org/show_bug.cgi?id=766631